# avif-rust

./: Cargo.toml  README.md  build.rs
src/: decoder.rs  encoder.rs  error.rs  ffi.rs  info.rs  lib.rs
tests/: config.rs  decode.rs  encode.rs  errors.rs  roundtrip.rs
tests/common/: mod.rs
