[package]
name = "avif-rs"
version = "26.6.0"
edition = "2024"
links = "avif"
build = "build.rs"
description = "Encode and decode AVIF images with SVT-AV1 and dav1d, via statically-linked libavif."
license = "Apache-2.0"
repository = "https://github.com/vegidio/avif-rs"
homepage = "https://github.com/vegidio/avif-rs"
readme = "README.md"
authors = ["Vinicius Egidio <me@vinicius.io>"]
keywords = ["avif", "image", "av1", "svt-av1", "encoding"]
categories = ["multimedia::images", "encoding"]
exclude = [".github/", ".idea/", ".editorconfig", "assets/", "rustfmt.toml"]

[lib]
name = "avif"

[dependencies]
image = "0.25"
thiserror = "2"

[build-dependencies]
bindgen = "0.72.1"
ureq = "3"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
